Fix: mobilenavbar is stuck on top of page

--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,10 @@ body {
   }
   
   .navbar-type-2 {
-    display: block;
+    position: fixed;
+    margin-left: 5px;
+    margin-top: 10px;
+    z-index: 2;
   }
   
   .sidenav2 {
@@ -205,7 +208,7 @@ body {
 
   .overlay {
     display: relative;
-    height: 100%;
+    height: 100vmax;
     width: 0;
     position: fixed;
     z-index: 2;
